# credit-g

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.serve  Dockerfile.train
scripts/: run_pipeline.py  serve.py
src/data/: ingest.py  preprocess.py  split.py  validate.py
src/evaluation/: metrics.py  report.py
src/features/: build.py
src/models/: predict.py  registry.py  train.py  tune.py
src/serving/: app.py
src/utils/: logger.py
